--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/GameLevel.GameLevel
 EditorStartupMap=/Game/Levels/GameLevel.GameLevel
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GameInstanceClass=/Game/Blueprints/BP_SSGameInstance.BP_SSGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
