add roll ball shoot

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/GameLevel.GameLevel
 EditorStartupMap=/Game/Levels/GameLevel.GameLevel
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/BP_SSGameLevelGameMode.BP_SSGameLevelGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_SSGameInstance.BP_SSGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
