--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,3 +83,10 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
 
+[/Script/EnhancedInput.EnhancedInputDeveloperSettings]
+bEnableWorldSubsystem=True
+
+[/Script/InputEditor.EnhancedInputEditorProjectSettings]
+DefaultEditorInputClass=/Script/EnhancedInput.EnhancedPlayerInput
++DefaultMappingContexts=(InputMappingContext="/Game/Input/IC_Base.IC_Base",Priority=0)
+
