- add beam move and shoot in direction - ecrease bounce

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/GameLevel.GameLevel
-EditorStartupMap=/Game/Levels/GameLevel.GameLevel
+GameDefaultMap=/Game/Levels/LVL_GameLevel.LVL_GameLevel
+EditorStartupMap=/Game/Levels/LVL_GameLevel.LVL_GameLevel
 GlobalDefaultGameMode=/Game/Blueprints/BP_SSGameLevelGameMode.BP_SSGameLevelGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_SSGameInstance.BP_SSGameInstance_C
 
