move grid - wip1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -79,3 +79,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.GridRowsNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.BallRowsNum")
++PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.MissesNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.MissesLimitNum")
