--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,5 +78,7 @@ ManualIPAddress=
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.GridRowsNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.BallRowsNum")
++PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.GridRowsNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.NumOfGridRowsWithBalls")
 +PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.MissesNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.MissesLimitNum")
++PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.GridMoveIfMissRatioToBallSize",NewName="/Script/SphereShooter.SSGameLevelGameMode.GridMoveDistance")
++PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.BallRowsNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.NumOfGridRowsWithBalls")
