add some color to all

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -1,2 +1,6 @@
 [/Script/AdvancedPreviewScene.SharedProfiles]
 
+[/Script/Paper2DEditor.PaperImporterSettings]
+LitDefaultMaskedMaterialName=/Game/Materials/Paper2D/MI_CustomDefaultLitSprite.MI_CustomDefaultLitSprite
+UnlitDefaultMaskedMaterialName=/Game/Materials/Paper2D/MI_CustomDefaultSprite.MI_CustomDefaultSprite
+
