rename hud, add main menu widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/LVL_GameLevel.LVL_GameLevel
-EditorStartupMap=/Game/Levels/LVL_GameLevel.LVL_GameLevel
+GameDefaultMap=/Game/Levels/LVL_00_MainMenu.LVL_00_MainMenu
+EditorStartupMap=/Game/Levels/LVL_00_MainMenu.LVL_00_MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/BP_SSGameLevelGameMode.BP_SSGameLevelGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_SSGameInstance.BP_SSGameInstance_C
 
@@ -82,3 +82,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.MissesNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.MissesLimitNum")
 +PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.GridMoveIfMissRatioToBallSize",NewName="/Script/SphereShooter.SSGameLevelGameMode.GridMoveDistance")
 +PropertyRedirects=(OldName="/Script/SphereShooter.SSGameLevelGameMode.BallRowsNum",NewName="/Script/SphereShooter.SSGameLevelGameMode.NumOfGridRowsWithBalls")
+
